@@ -40,27 +40,27 @@ if ($wr_id) return;
     </span>
 
     <?php if ($mw_basic[cf_social_commerce]) { ?>
-    <button class="fa-button" onclick="win_open('<?=$social_commerce_path?>/order_list.php?bo_table=<?=$bo_table?>',
+    <button class="fa-button" onclick="window.open('<?=$social_commerce_path?>/order_list.php?bo_table=<?=$bo_table?>',
         'order_list', 'width=800,height=600,scrollbars=1');"><i class="fa fa-shopping-cart"></i> 주문내역</button>
     <?php } ?>
 
     <?php if ($mw_basic[cf_talent_market]) { ?>
-    <button class="fa-button" onclick="win_open('<?=$talent_market_path?>/order_list.php?bo_table=<?=$bo_table?>',
+    <button class="fa-button" onclick="window.open('<?=$talent_market_path?>/order_list.php?bo_table=<?=$bo_table?>',
         'order_list', 'width=800,height=600,scrollbars=1');"><i class="fa fa-shopping-cart"></i> 주문내역</button>
     <?php } ?>
 
     <?php if ($is_admin && $mw_basic[cf_collect] == 'rss' && file_exists("$g4[path]/plugin/rss-collect/_lib.php")) {?>
-    <button class="fa-button" onclick="win_open('<?=$g4[path]?>/plugin/rss-collect/config.php?bo_table=<?=$bo_table?>',
+    <button class="fa-button" onclick="window.open('<?=$g4[path]?>/plugin/rss-collect/config.php?bo_table=<?=$bo_table?>',
         'rss_collect', 'width=800,height=600,scrollbars=1')"><i class="fa fa-wifi"></i> RSS수집</button>
     <?php } ?>
 
     <?php if ($is_admin && $mw_basic[cf_collect] == 'youtube' && file_exists("$g4[path]/plugin/youtube-collect/_lib.php")) {?>
-    <button class="fa-button" onclick="win_open('<?=$g4[path]?>/plugin/youtube-collect/config.php?bo_table=<?=$bo_table?>',
+    <button class="fa-button" onclick="window.open('<?=$g4[path]?>/plugin/youtube-collect/config.php?bo_table=<?=$bo_table?>',
         'youtube_collect', 'width=800,height=600,scrollbars=1')"><i class="fa fa-youtube"></i> 유투브</button>
     <?php } ?>
 
     <?php if ($is_admin && $mw_basic[cf_collect] == 'kakao' && file_exists("$g4[path]/plugin/kakao-collect/_lib.php")) {?>
-    <button class="fa-button" onclick="win_open('<?=$g4[path]?>/plugin/kakao-collect/config.php?bo_table=<?=$bo_table?>',
+    <button class="fa-button" onclick="window.open('<?=$g4[path]?>/plugin/kakao-collect/config.php?bo_table=<?=$bo_table?>',
         'kakao_collect', 'width=800,height=600,scrollbars=1')"><i class="fa fa-wifi"></i> 카카오</button>
     <?php } ?>
 
