@@ -7,16 +7,21 @@ ver 2.9.6 (15.09.01)
     : 모바일 체크 함수 처리 (엑노님 제안)
     : 본문 버튼 위치 번경
     : 분류 라인 오류 수정
+    : win_open -> window.open 으로 변경
 
     mw.basic/HISTORY
     mw.basic/mw.adm/mw.config.update.php
     mw.basic/mw.proc/mw.file.viewer.php
+    mw.basic/mw.proc/mw.one.talk.php
+    mw.basic/mw.proc/mw.top.button.php
+    mw.basic/mw.proc/mw.vote.php
     mw.basic/mw.lib/mw.skin.basic.lib.php
     mw.basic/mw.lib/mw.function.lib.php
     mw.basic/list.skin.php
     mw.basic/write.skin.php
     mw.basic/write_update.skin.php
     mw.basic/view.skin.php
+    mw.basic/view_head.skin.php
     mw.basic/view_comment.skin.php
     mw.basic/write_comment_update.skin.php
 
